--- a/app/templates/shop/product_detail.html
+++ b/app/templates/shop/product_detail.html
@@ -63,15 +63,7 @@
                     </span>
                 </div>
                 
-                <!-- 標籤 -->
-                <div x-show="product?.tags && product.tags.length > 0" class="flex flex-wrap gap-2">
-                    <template x-for="tag in product.tags" :key="tag.id">
-                        <a :href="'/tags/' + tag.slug + '/products'" 
-                           class="inline-block bg-blue-100 text-blue-700 px-3 py-1 rounded-full text-sm hover:bg-blue-200 transition-colors"
-                           x-text="tag.name">
-                        </a>
-                    </template>
-                </div>
+                <!-- 商品標籤已移除 -->
                 
                 <!-- 數量選擇和加入購物車 -->
                 <div class="space-y-4">
